[package]
name = "invidious-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "^0.11"

serde = { version = "^1.0", features = [ "derive" ] }
serde_json = "^1.0"

tokio = { version = "^1.12" , features = [ "macros", "rt", "rt-multi-thread" ]}
futures = "^0.3"
async-stream = "^0.3"

log = "^0.4"

[dev-dependencies]
env_logger = "0.9.0"
